# psite

./: .gitignore  README.md  example.md  setup.cfg
psite/: coverage.py  main.py  pbam.py  predict.py  setp.py  train.py  utils.py
scripts/: README.md  extract_txinfo.R  extract_txinfo_ensembl.R
src/: __main__.py  coverage.py  hello_world.py  main.py  pbam.py  predict.py  train.py  train_p.py  utils.py
tests/: psite_bam.py  psite_cov.py  tmp.py
tmp/: psite_predict.py  psite_train.py  train_p.py
