[metadata]
name = psite
version = 0.0.3
author = Hong Zhang (mt1022)
author_email = gxelab@163.com
description = Model-based inference of P-site offsets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gxelab/psite
project_urls =
    Bug Tracker = https://github.com/gxelab/psite/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
python_requires = >=3.9
install.requires =
    numpy >= 1.21.2
    pandas >= 1.3.4
    sklearn >= 1.1.1
    biopython >= 1.79
    pysam >= 0.17.0
    click >= 8.1.2
    pyBigWig >= 0.3.18

[options.entry_points]
console_scripts =
    psite = psite.main:psite
